feat: added minireset.css

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-source-filesystem": "^2.1.42",
     "gatsby-transformer-remark": "^2.6.42",
     "lodash": "^4.17.15",
+    "minireset.css": "0.0.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
