feat: added plugins

--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "gatsby": "^2.18.10",
     "gatsby-plugin-catch-links": "^2.1.21",
+    "gatsby-plugin-react-helmet": "^3.1.18",
     "gatsby-source-filesystem": "^2.1.42",
     "gatsby-transformer-remark": "^2.6.42",
     "lodash": "^4.17.15",
     "minireset.css": "0.0.6",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1"
   }
 }
