--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
   "dependencies": {
     "gatsby": "^2.18.10",
     "gatsby-plugin-catch-links": "^2.1.21",
+    "gatsby-plugin-feed": "^2.3.25",
+    "gatsby-plugin-google-analytics": "^2.1.31",
+    "gatsby-plugin-manifest": "^2.2.33",
+    "gatsby-plugin-offline": "^3.0.29",
     "gatsby-plugin-react-helmet": "^3.1.18",
+    "gatsby-plugin-sitemap": "^2.2.24",
     "gatsby-source-filesystem": "^2.1.42",
     "gatsby-transformer-remark": "^2.6.42",
     "lodash": "^4.17.15",
